apps/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
  name: glance
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: glance
      app.kubernetes.io/name: glance
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: glance
        app.kubernetes.io/name: glance
    spec:
      containers:
        - name: glance
          image: glance
          imagePullPolicy: IfNotPresent
          command:
            - "/app/glance"
            - "-config"
            - "/config/glance.yml"
          volumeMounts:
            - mountPath: /config
              name: glance-config
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          ports:
            - containerPort: 8080
              hostPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 256Mi
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      volumes:
        - name: glance-config
          configMap:
              name: glance-config
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-registry-cred
