apps/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
  name: glance
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
  type: ClusterIP
